# Kyaru

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat
Files/: RulesBackup.txt  library_cycles.json
cogs/: admin.py  background.py  commands.py  events.py  help.py  leveling.py  roleplay_universe.py
utils/: FirebaseDB.py  classes.py  errorlog.py  utils.py
utils/MALSchedule/: malschedule.py
