[tool.poetry]
name = "kyaru"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
firebase-admin = "^5.0.0"
pillow = "^8.2.0"
multidict = "^5.1.0"
expiringdict = "1.2.1"
aiohttp_jinja2 = "1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
